--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         </section>
         <footer class="rodape">
-            <img src="img/Logo.png" alt="logo do Alura+" class="rodape-logo">
+            <img src="img/Logo.png" alt="logo do Alura+">
             <ul class="rodape-lista">
                 <li class="lista-link">
                     <a href="#">Idioma</a>
